force-app/main/default/objects/SP_Idea__c/SP_Idea__c.object-meta.xml
<CustomObject>
    <label>Support Portal Idea</label>
    <pluralLabel>Support Portal Ideas</pluralLabel>
    <nameField>
        <displayFormat>IDEA-{00000}</displayFormat>
        <label>Idea Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Feature requests and improvement ideas submitted through the Support Portal.</description>
</CustomObject>