force-app/main/default/objects/SP_Idea__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Feature</fullName><default>true</default><label>Feature</label></value>
            <value><fullName>Improvement</fullName><default>false</default><label>Improvement</label></value>
            <value><fullName>Integration</fullName><default>false</default><label>Integration</label></value>
            <value><fullName>UX</fullName><default>false</default><label>UX</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>