force-app/main/default/objects/SP_Idea__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Submitted By</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Ideas</relationshipName>
    <relationshipLabel>Ideas</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Portal user who submitted this idea.</description>
</CustomField>