force-app/main/default/objects/SP_Idea__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <label>Description</label>
    <type>LongTextArea</type>
    <length>32000</length>
    <description>Detailed description of the idea.</description>
</CustomField>