force-app/main/default/objects/SP_Idea__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Text</type>
    <length>255</length>
    <description>Product this idea relates to.</description>
</CustomField>