force-app/main/default/objects/SP_Idea__c/fields/Published__c.field-meta.xml
<CustomField>
    <fullName>Published__c</fullName>
    <label>Published</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>When true, this idea is visible on the portal Ideas page. Admins can uncheck to hide spam or inappropriate content.</description>
</CustomField>