force-app/main/default/objects/SP_Idea__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <type>Text</type>
    <length>255</length>
    <required>true</required>
    <description>Short summary of the idea or feature request.</description>
</CustomField>