force-app/main/default/objects/SP_Idea__c/fields/Vote_Count__c.field-meta.xml
<CustomField>
    <fullName>Vote_Count__c</fullName>
    <label>Vote Count</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>0</scale>
    <defaultValue>0</defaultValue>
    <description>Number of upvotes from portal users.</description>
</CustomField>