force-app/main/default/objects/SP_Idea__c/fields/Voted_Contact_Ids__c.field-meta.xml
<CustomField>
    <fullName>Voted_Contact_Ids__c</fullName>
    <label>Voted Contact Ids</label>
    <type>LongTextArea</type>
    <length>32000</length>
    <description>Comma-separated Contact IDs who voted for this idea. Managed by SPIdeaController.</description>
</CustomField>