force-app/main/default/objects/SP_Idea__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Category__c</columns>
    <columns>Status__c</columns>
    <columns>Vote_Count__c</columns>
    <columns>Published__c</columns>
    <columns>Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>